--- a/ORM-Dapper/appsettings.json
+++ b/ORM-Dapper/appsettings.json
@@ -1,3 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<configuration>
-</configuration>
+{
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=bestbuy;uid=root;Pwd=password;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
